hard-gists/672229/run.log
=== Docker Run Log for 672229 ===
Started at: Mi 29. Okt 16:42:25 CET 2025

[2025-10-29 16:42:25] START: Running container for 672229
[2025-10-29 16:42:26] SUCCESS: Container 2f5402d5b7ba5b62d934daacf8e82c51b01d0012a1920a22cf3ac81f4e1ccab6 started for 672229
=== Container logs for 672229 ===
  File "/snippet.py", line 53
    print '== loop %d ============================' % loop
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 672229 ===
[2025-10-29 16:42:28] INFO: Container 2f5402d5b7ba5b62d934daacf8e82c51b01d0012a1920a22cf3ac81f4e1ccab6 has stopped
